// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Max count reached 1`] = `
HTMLCollection [
  <button
    class="transparent s-NMyTiX1zi6rz"
    title="Restaurer la position initiale de la camera (Début)"
  >
    <div
      class="s-NMyTiX1zi6rz"
    >
      <span
        class="material-icons s-NMyTiX1zi6rz"
      >
        videocam
      </span>
      
      
    </div>
     
  </button>,
  <button
    class="transparent s-NMyTiX1zi6rz"
    title="Restaurer (clic / 1) ou mettre à jour (clic long / Ctrl+1) la position à l'emplacement"
  >
    <div
      class="s-NMyTiX1zi6rz"
    >
      <span
        class="material-icons s-NMyTiX1zi6rz"
      >
        videocam
      </span>
      
      
    </div>
     
    <span
      class="badge s-NMyTiX1zi6rz"
    >
      1
    </span>
  </button>,
  <button
    class="transparent s-NMyTiX1zi6rz"
    title="Restaurer (clic / 2) ou mettre à jour (clic long / Ctrl+2) la position à l'emplacement"
  >
    <div
      class="s-NMyTiX1zi6rz"
    >
      <span
        class="material-icons s-NMyTiX1zi6rz"
      >
        videocam
      </span>
      
      
    </div>
     
    <span
      class="badge s-NMyTiX1zi6rz"
    >
      2
    </span>
  </button>,
  <button
    class="transparent s-NMyTiX1zi6rz"
    title="Restaurer (clic / 3) ou mettre à jour (clic long / Ctrl+3) la position à l'emplacement"
  >
    <div
      class="s-NMyTiX1zi6rz"
    >
      <span
        class="material-icons s-NMyTiX1zi6rz"
      >
        videocam
      </span>
      
      
    </div>
     
    <span
      class="badge s-NMyTiX1zi6rz"
    >
      3
    </span>
  </button>,
]
`;

exports[`Multiple saves 1`] = `
HTMLCollection [
  <button
    class="transparent s-NMyTiX1zi6rz"
    title="Restaurer la position initiale de la camera (Début)"
  >
    <div
      class="s-NMyTiX1zi6rz"
    >
      <span
        class="material-icons s-NMyTiX1zi6rz"
      >
        videocam
      </span>
      
      
    </div>
     
  </button>,
  <button
    class="transparent s-NMyTiX1zi6rz"
    title="Restaurer (clic / 1) ou mettre à jour (clic long / Ctrl+1) la position à l'emplacement"
  >
    <div
      class="s-NMyTiX1zi6rz"
    >
      <span
        class="material-icons s-NMyTiX1zi6rz"
      >
        videocam
      </span>
      
      
    </div>
     
    <span
      class="badge s-NMyTiX1zi6rz"
    >
      1
    </span>
  </button>,
  <button
    class="transparent s-NMyTiX1zi6rz"
    title="Restaurer (clic / 2) ou mettre à jour (clic long / Ctrl+2) la position à l'emplacement"
  >
    <div
      class="s-NMyTiX1zi6rz"
    >
      <span
        class="material-icons s-NMyTiX1zi6rz"
      >
        videocam
      </span>
      
      
    </div>
     
    <span
      class="badge s-NMyTiX1zi6rz"
    >
      2
    </span>
  </button>,
  <button
    class="transparent s-NMyTiX1zi6rz"
    title="Enregistrer la position (Ctrl+1~9)"
  >
    <div
      class="s-NMyTiX1zi6rz"
    >
      <span
        class="material-icons s-NMyTiX1zi6rz"
      >
        video_call
      </span>
      
      
    </div>
     
  </button>,
]
`;

exports[`Multiple saves with current 1`] = `
HTMLCollection [
  <button
    class="transparent s-NMyTiX1zi6rz"
    title="Restaurer la position initiale de la camera (Début)"
  >
    <div
      class="s-NMyTiX1zi6rz"
    >
      <span
        class="material-icons s-NMyTiX1zi6rz"
      >
        videocam
      </span>
      
      
    </div>
     
  </button>,
  <button
    class="transparent s-NMyTiX1zi6rz"
    disabled=""
    title="Restaurer (clic / 1) ou mettre à jour (clic long / Ctrl+1) la position à l'emplacement"
  >
    <div
      class="s-NMyTiX1zi6rz"
    >
      <span
        class="material-icons s-NMyTiX1zi6rz"
      >
        videocam
      </span>
      
      
    </div>
     
    <span
      class="badge s-NMyTiX1zi6rz"
    >
      1
    </span>
  </button>,
  <button
    class="transparent s-NMyTiX1zi6rz"
    title="Restaurer (clic / 2) ou mettre à jour (clic long / Ctrl+2) la position à l'emplacement"
  >
    <div
      class="s-NMyTiX1zi6rz"
    >
      <span
        class="material-icons s-NMyTiX1zi6rz"
      >
        videocam
      </span>
      
      
    </div>
     
    <span
      class="badge s-NMyTiX1zi6rz"
    >
      2
    </span>
  </button>,
  <button
    class="transparent s-NMyTiX1zi6rz"
    disabled=""
    title="Enregistrer la position (Ctrl+1~9)"
  >
    <div
      class="s-NMyTiX1zi6rz"
    >
      <span
        class="material-icons s-NMyTiX1zi6rz"
      >
        video_call
      </span>
      
      
    </div>
     
  </button>,
]
`;

exports[`Single save 1`] = `
HTMLCollection [
  <button
    class="transparent s-NMyTiX1zi6rz"
    title="Restaurer la position initiale de la camera (Début)"
  >
    <div
      class="s-NMyTiX1zi6rz"
    >
      <span
        class="material-icons s-NMyTiX1zi6rz"
      >
        videocam
      </span>
      
      
    </div>
     
  </button>,
  <button
    class="transparent s-NMyTiX1zi6rz"
    title="Enregistrer la position (Ctrl+1~9)"
  >
    <div
      class="s-NMyTiX1zi6rz"
    >
      <span
        class="material-icons s-NMyTiX1zi6rz"
      >
        video_call
      </span>
      
      
    </div>
     
  </button>,
]
`;
